--- a/trip-planner-trivago/package.json
+++ b/trip-planner-trivago/package.json
@@ -16,6 +16,8 @@
     "backend"
   ],
   "dependencies": {
-    "date-fns": "^3.6.0"
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.445.0",
+    "react-router-dom": "^6.26.2"
   }
 }
