--- a/trip-planner-trivago/frontend/package.json
+++ b/trip-planner-trivago/frontend/package.json
@@ -13,12 +13,17 @@
   "dependencies": {
     "@squidcloud/react": "^1.0.55",
     "@squidcloud/samples": "^1.0.12",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.445.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
